--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Switch</title>
+    <style>
+      body {
+        background-color: black;
+        color: white;
+        transition: background-color 0.5s, color 0.5s;
+      }
+      .switch {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    </style>
+  </head>
+  <body>
+    <label class="switch">
+      <input type="checkbox" id="themeSwitch">
+      <span>Switch</span>
+    </label>
+
+    <script>
+      const checkbox = document.getElementById('themeSwitch');
+      checkbox.addEventListener('change', () => {
+        if (checkbox.checked) {
+          document.body.style.backgroundColor = "white";
+          document.body.style.color = "black";
+        } else {
+          document.body.style.backgroundColor = "black";
+          document.body.style.color = "white";
+        }
+      });
+    </script>
+  </body>
+</html>
 
